dataset/local/tf_s3_kms_encryption/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-encrypted-bucket
      - type: aws_s3_bucket_server_side_encryption_configuration
        values:
          bucket: my-encrypted-bucket
          rule:
            - apply_server_side_encryption_by_default:
                - sse_algorithm: "aws:kms"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-encrypted-bucket
      - type: aws_s3_bucket_server_side_encryption_configuration
        values:
          bucket: my-bad-encrypted-bucket
          rule:
            - apply_server_side_encryption_by_default:
                - sse_algorithm: AES256
