dataset/local/tf_s3_kms_encryption/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: s3-enable-kms-encryption
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: s3-enable-kms-encryption
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: s3-enable-kms-encryption
    kind: Plan
    resources:
      - bad-plan
    result: fail
